// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table roles {
  role_id integer [primary key]
  name varchar(32) [not null, unique]
}

Table users {
  user_id integer [primary key]
  name varchar(64) [not null, unique]
  hashed_password varchar [not null]
  is_active boolean [not null, default: true]
  role_id integer
}

Table locations {
  location_id integer [primary key]
  name varchar [not null, unique]
}

Table food_places {
  food_place_id integer [primary key]
  name varchar [not null]
  address varchar [not null]
  description text
  open_time time [not null]
  close_time time [not null]
  location_id integer [not null]
}

Table food_tables {
  food_table_id integer [primary key]
  table_number varchar [not null]
  max_seats integer [not null]
  food_place_id integer [not null]
}

Table menu_items {
  menu_item_id integer [primary key]
  name varchar [not null]
  price numeric(10,2) [not null]
  description text
  food_place_id integer [not null]
}

Table food_baskets {
  food_basket_id integer [primary key]
  ordered_at timestamp
  is_ordered boolean [not null, default: false]
  user_id integer [not null]
  food_place_id integer [not null]
  order_type varchar(50) [default: 'dinein']
  phone varchar(50)
  address varchar(255)
  status varchar(50) [not null, default: 'new']
}

Table basket_items {
  basket_item_id integer [primary key]
  item_quantity integer [not null, default: 1]
  menu_item_id integer [not null]
  food_basket_id integer [not null]
}

Table reservations {
  reservation_id integer [primary key]
  start_datetime timestamp [not null]
  duration_in_minutes integer [not null]
  user_id integer [not null]
  food_table_id integer [not null]
}

// Relationships (References)
Ref: users.role_id > roles.role_id // many-to-one
Ref: food_places.location_id > locations.location_id [delete: cascade]
Ref: food_tables.food_place_id > food_places.food_place_id [delete: cascade]
Ref: menu_items.food_place_id > food_places.food_place_id [delete: cascade]
Ref: food_baskets.user_id > users.user_id [delete: cascade]
Ref: food_baskets.food_place_id > food_places.food_place_id [delete: cascade]
Ref: basket_items.menu_item_id > menu_items.menu_item_id [delete: cascade]
Ref: basket_items.food_basket_id > food_baskets.food_basket_id [delete: cascade]
Ref: reservations.user_id > users.user_id [delete: cascade]
Ref: reservations.food_table_id > food_tables.food_table_id [delete: cascade]

// Seed Records
Records roles(role_id, name) {
  1, 'client'
  2, 'manager'
}

Records users(user_id, name, hashed_password, role_id) {
  1, 'ivanov', '$2b$12$ExampleHashedPasswordForIvanov...', 1
  2, 'smirnov_manager', '$2b$12$ExampleHashedPasswordForSmirnov...', 2
}

Records locations(location_id, name) {
  1, 'Москва'
  2, 'Санкт-Петербург'
}

Records food_places(food_place_id, name, address, open_time, close_time, location_id) {
  1, 'GastroReserve Burgundy', 'ул. Арбат, д. 12', '09:00:00', '23:00:00', 1
  2, 'Паста & Базилик', 'Невский пр., д. 45', '10:00:00', '22:00:00', 2
}

Records food_tables(food_table_id, table_number, max_seats, food_place_id) {
  1, '1', 4, 1
  2, '2', 2, 1
  3, '3', 6, 1
  4, '10', 4, 2
}

Records menu_items(menu_item_id, name, price, description, food_place_id) {
  1, 'Пицца Маргарита', 450.00, 'Классическая пицца с томатами и моцареллой', 1
  2, 'Паста Карбонара', 550.00, 'Паста со сливками, беконом и пармезаном', 1
  3, 'Домашний лимонад', 250.00, 'Освежающий напиток с мятой и лимоном', 1
}

Records food_baskets(food_basket_id, is_ordered, user_id, food_place_id, order_type, phone, address, status) {
  1, true, 1, 1, 'delivery', '+79991234567', 'ул. Ленина, д. 5, кв. 10', 'preparing'
  2, false, 1, 1, 'dinein', null, null, 'new'
}

Records basket_items(basket_item_id, item_quantity, menu_item_id, food_basket_id) {
  1, 2, 1, 1
  2, 1, 3, 1
  3, 1, 2, 2
}

Records reservations(reservation_id, start_datetime, duration_in_minutes, user_id, food_table_id) {
  1, '2026-06-04 19:00:00', 120, 1, 1
}
